fix: overflow issue on sticky header and column (#1078)
* fix: overflow issue on sticky header and column

* fix: sticky shodow issues

--- a/projects/ng-aquila/src/table/table.component.scss
+++ b/projects/ng-aquila/src/table/table.component.scss
@@ -249,8 +249,14 @@ $sticky-shadow-size: nx-spacer(3xs);
         .nx-header-cell {
             position: sticky;
             top: 0;
-            z-index: 1;
+            z-index: 2;
             background: v(ui-01); //since `table-header-cell-background-color` is currently transparent in all themes
+
+            :host(.nx-table--sticky-first) &:first-child,
+            :host(.nx-table--sticky-last) &:last-child {
+                // case sticky header row AND sticky first column
+                z-index: 3;
+            }
         }
     }
 }
